# aaf

./: .gitignore  AAFSystemTest.ksh  EfficiencyStats.ksh  GNUmakefile  GNUmakefile.dist  Makefile.am  RunModTestAndExamples.bash  RunModTestAndExamples.ksh  aaf-uninstalled.pc.in  aaf.pc.in  configure.ac  unixaafsdk.mak  update.ksh
AAFWinSDK/: win32aafsdk.mak
DevUtils/: GNUmakefile
Utilities/: GNUmakefile  comrules.mk
dodo/: AAFAES3PCMDescriptor.dod  AAFAES3PCMDescriptor2.dod  AAFAIFCData.dod  AAFAIFCDescriptor.dod  AAFAuxiliaryDescriptor.dod  AAFAuxillaryDescriptor.dod  AAFBWFImportDescriptor.dod  AAFCDCIDescriptor.dod  AAFCDCIDescriptor2.dod  AAFCachePageAllocator.dod  AAFClassDef.dod  AAFClassExtension.dod  AAFCodecDef.dod  AAFCommentMarker.dod  AAFComponent.dod  AAFComponent2.dod  AAFCompositionMob.dod  AAFCompositionMob2.dod  AAFConstantValue.dod  AAFContainerDef.dod  AAFContentStorage.dod  AAFContext.dod  AAFControlPoint.dod  AAFDOSLocator.dod  AAFDataDef.dod  AAFDataDef2.dod  AAFDataDef3.dod  AAFDataEssenceDescriptor.dod  AAFDataKind.dod  AAFDefObject.dod  AAFDescriptiveClip.dod  AAFDescriptiveFramework.dod  AAFDescriptiveMarker.dod  AAFDictionary.dod  (+231 more)
ref-impl/include/: AAFCOMPlatform.h  AAFCOMPlatformTypes.h  AAFClassDefUIDs.h  AAFCodecDefs.h  AAFCompressionDefs.h  AAFCompressionIDs.h  AAFContainerDefs.h  AAFDataDefs.h  AAFDefUIDs.h  AAFEssenceFormats.h  AAFExtEnum.h  AAFFileKinds.h  AAFFileMode.h  AAFInterpolatorDefs.h  AAFKLVDataDefs.h  AAFMetaDictionary.h  AAFMetaResult.h  AAFOPDefs.h  AAFOperationCategories.h  AAFOperationDefs.h  AAFParameterDefs.h  AAFPlatform.h  AAFPluginDefs.h  AAFPropertyDefs.h  AAFPropertyIDs.h  AAFResult.h  AAFSDKBuild.h  AAFSmartPointer.h  AAFSmartPointer2.h  AAFSmartPointerBase.h  AAFStoredObjectIDs.h  AAFTaggedValueDefs.h  AAFTypeDefUIDs.h  CAAFBuiltinDefs.h  Makefile.am  utf8.h
ref-impl/include/OM/: OMAVLTree.h  OMArrayProperty.h  OMArrayPropertyIterator.h  OMArrayType.h  OMBufferedIStream.h  OMBufferedStream.h  OMCachePageAllocator.h  OMCachedDiskRawStorage.h  OMCachedRawStorage.h  OMCharacterStringProperty.h  OMCharacterType.h  OMClassDefinition.h  OMContainer.h  OMContainerElement.h  OMContainerIterator.h  OMContainerProperty.h  OMDataContainer.h  OMDataContainerIterator.h  OMDataSet.h  OMDataStream.h  OMDataStreamAccess.h  OMDataStreamProperty.h  OMDataStreamPropertyFilter.h  OMDataTypes.h  OMDataVector.h  OMDefinition.h  OMDictionary.h  OMDiskRawStorage.h  OMDiskRawStorageGroup.h  OMDynamicLibrary.h  OMEnumeratedType.h  OMExceptions.h  OMExtEnumeratedType.h  OMExtendibleEnumeratedType.h  OMFixedArrayType.h  OMFixedSizeProperty.h  OMGSF_SSStoredObjectFactory.h  OMGSFxMSSStoredObjectFactory.h  OMIOStream.h  OMIdentitySet.h  (+104 more)
ref-impl/include/com-api/: AAF.h  AAF.idl  AAFPlugin.h  AAFPlugin.idl  AAFPluginTypes.h  AAFPluginTypes.idl  AAFPrivate.h  AAFPrivate.idl  AAFTypes.h  AAFTypes.idl  AAF_i.c  midlaafobjects.mk
ref-impl/include/ref-api/: AAF.h  AAFPlugin.h  AAFPluginTypes.h  AAFPlugin_i.c  AAFPrivate.h  AAFPrivate_i.c  AAFTypes.h  AAF_i.c  Makefile.am
ref-impl/src/OM/: GNUmakefile  GNUmakefile.dist  Makefile.am  OMAVLTreeT.h  OMArrayPropertyIteratorT.h  OMArrayPropertyT.h  OMArrayType.cpp  OMAssertions.cpp  OMAssertions.h  OMBufferedIStream.cpp  OMBufferedStream.cpp  OMByteArray.cpp  OMByteArray.h  OMCachePageAllocator.cpp  OMCachedDiskRawStorage.cpp  OMCachedRawStorage.cpp  OMCharacterStringPropertyT.h  OMCharacterType.cpp  OMClassDefinition.cpp  OMClassFactory.h  OMContainerElement.cpp  OMContainerElementT.h  OMContainerProperty.cpp  OMDataSet.cpp  OMDataStream.cpp  OMDataStreamAccess.cpp  OMDataStreamProperty.cpp  OMDataStreamPropertyFilter.cpp  OMDataTypes.cpp  OMDataVector.cpp  OMDefinition.cpp  OMDictionary.cpp  OMDiskRawStorage.cpp  OMDiskRawStorageGroup.cpp  OMDynamicLibrary.cpp  OMEnumeratedType.cpp  OMExceptions.cpp  OMExtendibleEnumeratedType.cpp  OMFile.cpp  OMFile.h  (+142 more)
ref-impl/src/com-api/: AAFCLSIDs.h  AAFObjectTable.h  AAFObjectTable_i.cpp  CAAFAES3PCMDescriptor.cpp  CAAFAES3PCMDescriptor.h  CAAFAIFCDescriptor.cpp  CAAFAIFCDescriptor.h  CAAFAuxiliaryDescriptor.cpp  CAAFAuxiliaryDescriptor.h  CAAFAuxillaryDescriptor.cpp  CAAFAuxillaryDescriptor.h  CAAFBWFImportDescriptor.cpp  CAAFBWFImportDescriptor.h  CAAFBuiltinDefs.h  CAAFCDCIDescriptor.cpp  CAAFCDCIDescriptor.h  CAAFCachePageAllocator.cpp  CAAFCachePageAllocator.h  CAAFClassDef.cpp  CAAFClassDef.h  CAAFCodecDef.cpp  CAAFCodecDef.h  CAAFCommentMarker.cpp  CAAFCommentMarker.h  CAAFComponent.cpp  CAAFComponent.h  CAAFCompositionMob.cpp  CAAFCompositionMob.h  CAAFConstantValue.cpp  CAAFConstantValue.h  CAAFContainerDef.cpp  CAAFContainerDef.h  CAAFContentStorage.cpp  CAAFContentStorage.h  CAAFControlPoint.cpp  CAAFControlPoint.h  CAAFDataDef.cpp  CAAFDataDef.h  CAAFDataEssenceDescriptor.cpp  CAAFDataEssenceDescriptor.h  (+299 more)
ref-impl/src/com-api/com-dll/: AAFCOM.DEF  AAFCOM.cpp  AAFObjectCreation.cpp  CAAFClassFactory.cpp  CAAFClassFactory.h  CAAFInProcServer.cpp  CAAFInProcServer.h  CAAFServer.cpp  CAAFServer.h  CAAFUnknown.cpp  CAAFUnknown.h  GNUmakefile  GNUmakefile.dist  utf8.cpp
ref-impl/src/impl/: AAFClassIDs.h  AAFComponentVisitor.h  AAFObjectModel.cpp  AAFObjectModel.h  AAFObjectModelProcs.cpp  AAFObjectModelProcs.h  AAFUtils.cpp  AAFUtils.h  GNUmakefile  ImplAAFAES3PCMDescriptor.cpp  ImplAAFAES3PCMDescriptor.h  ImplAAFAIFCDescriptor.cpp  ImplAAFAIFCDescriptor.h  ImplAAFAuxiliaryDescriptor.cpp  ImplAAFAuxiliaryDescriptor.h  ImplAAFAuxillaryDescriptor.cpp  ImplAAFAuxillaryDescriptor.h  ImplAAFBWFImportDescriptor.cpp  ImplAAFBWFImportDescriptor.h  ImplAAFBaseClassFactory.cpp  ImplAAFBaseClassFactory.h  ImplAAFBuiltinClasses.cpp  ImplAAFBuiltinClasses.h  ImplAAFBuiltinDefs.h  ImplAAFBuiltinTypes.cpp  ImplAAFBuiltinTypes.h  ImplAAFCDCIDescriptor.cpp  ImplAAFCDCIDescriptor.h  ImplAAFCachePageAllocator.cpp  ImplAAFCachePageAllocator.h  ImplAAFClassDef.cpp  ImplAAFClassDef.h  ImplAAFClientDiagnostics.cpp  ImplAAFClientDiagnostics.h  ImplAAFCloneResolver.cpp  ImplAAFCloneResolver.h  ImplAAFCodecDef.cpp  ImplAAFCodecDef.h  ImplAAFCollection.h  ImplAAFCommentMarker.cpp  (+350 more)
(+986 files in other folders)
