SUBDIRS = ref-api

aafdir = $(includedir)/aaf

aaf_HEADERS = \
	AAFClassDefUIDs.h AAFCodecDefs.h AAFCOMPlatform.h AAFCOMPlatformTypes.h \
	AAFCompressionDefs.h AAFContainerDefs.h AAFDataDefs.h AAFDefUIDs.h \
	AAFEssenceFormats.h AAFExtEnum.h AAFFileKinds.h AAFFileMode.h \
	AAFInterpolatorDefs.h AAFMetaDictionary.h AAFOPDefs.h \
	AAFOperationCategories.h AAFOperationDefs.h AAFParameterDefs.h \
	AAFPlatform.h AAFPluginDefs.h AAFPropertyDefs.h AAFPropertyIDs.h \
	AAFResult.h AAFSmartPointer2.h AAFSmartPointerBase.h AAFSmartPointer.h \
	AAFStoredObjectIDs.h AAFTypeDefUIDs.h
